# DST_awkward

./: .gitignore  README.md  pyproject.toml
legacy/: brhyp1_dst.c  brhyp1_dst.h  brplane_dst.h  brraw_dst.h  brtubeprofile_dst.h  bsdinfo_dst.h  fdplane_dst.h  fdraw_dst.h  fdtubeprofile_dst.h  fraw1_dst.h  geobr_dst.h  geofd_dst.h  geolr_dst.h  hcbin_dst.h  hctim_dst.h  hyp1_dst.c  hyp1_dst.h  hytubeprofile_dst.c  hytubeprofile_dst.h  lrhyp1_dst.c  lrhyp1_dst.h  lrplane_dst.h  lrraw_dst.h  lrtubeprofile_dst.h  mdweat_dst.h  prfc_dst.h  rufldf_dst.h  rufptn_dst.h  rusdgeom_dst.h  rusdmc1_dst.h  rusdmc_dst.h  rusdraw_dst.h  sdtrgbk_dst.h  showlib_dst.h  stplane_dst.h  stpln_dst.h  stps2_dst.h  sttubeprofile_dst.h  talex00_dst.c  talex00_dst.h  (+5 more)
src/dst_awkward/: conditional_bank_utils.py  dst_awkward_dump.py  dst_events_to_awkward.py  dst_io.py  dst_reader.py  hcbin_reader.py  hctim_reader.py  prfc_reader.py  stpln_reader.py  stps2_reader.py
src/dst_awkward/dump/: __init__.py  brhyp1.py  brplane.py  brraw.py  fdplane.py  fdraw.py  geobr.py  geofd.py  geolr.py  hcbin.py  hctim.py  hyp1.py  lrhyp1.py  lrplane.py  lrraw.py  mdweat.py  prfc.py  rufldf.py  rufptn.py  rusdgeom.py  rusdmc.py  rusdmc1.py  rusdraw.py  showlib.py  stpln.py  stps2.py  (+2 more)
tests/: test_fdplane_dump.py  test_fdraw_dump.py  test_hyp1_dump.py  test_prfc_reader.py  test_prfc_to_awkward_dump.py  test_rufldf_dump.py  test_rufptn_dump.py  test_rusdgeom_dump.py  test_rusdmc_rusdmc1_dump.py  test_rusdraw_dump.py  test_sdrec.py  test_sdtrgbk_dump.py  test_stplane_dump.py  test_tubeprofile_dump.py  validate_dump.py
(+37 files in other folders)
