[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dst-awkward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awkward>=2.8.11",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
]

[project.scripts]
dst-dump = "dst_awkward.dst_awkward_dump:main"
dst-convert = "dst_awkward.dst_events_to_awkward:main"

[tool.setuptools.package-data]
dst_awkward = ["schemas/*.yaml", "schemas/*.yml"]
